@@ -165,9 +165,18 @@ namespace internal{
 		return std::complex<float>(static_cast<float>(from.r), static_cast<float>(from.i) ) ;
 	}
 
+	int rcpp_call_test_(SEXP x){
+		RCPP_RETURN_VECTOR( rcpp_call_test, x );
+	}
+	
 	
 } // internal
 } // Rcpp
+
+SEXP rcpp_call_test(SEXP x){
+	return Rf_ScalarInteger( ::Rcpp::internal::rcpp_call_test_(x) ) ;
+}
+
 
 SEXP RcppXPtrExample_create_external_pointer(){
 	std::vector<int> *v = new std::vector<int> ;
